k8s/server/monitoring/management-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-management
  namespace: base
spec:
  podSelector:
    matchLabels:
      app: gateway
  policyTypes: [Ingress]
  ingress:
    - ports:
        - protocol: TCP
          port: 18080
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 18081
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: uaa-management
  namespace: base
spec:
  podSelector:
    matchLabels:
      app: uaa
  policyTypes: [Ingress]
  ingress:
    - ports:
        - protocol: TCP
          port: 33336
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 19002
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blog-management
  namespace: blog
spec:
  podSelector:
    matchLabels:
      app: blog-background
  policyTypes: [Ingress]
  ingress:
    - ports:
        - protocol: TCP
          port: 9000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: base
          podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 19001
